[tool.poetry]
name = "express-cafe-db-migrations"
version = "0.1.0"
description = ""
authors = ["brycelamborne <blamb@live.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
